Store race report title, and display in race listing

--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700')
 
 *
-  margin 0
   padding 0
   box-sizing border-box
 
@@ -43,7 +42,7 @@ body
 
   p
     line-height 1.6
-    margin-bottom 1.7em
+    margin-bottom 1em
 
 .footer
   margin 50px auto
@@ -97,9 +96,12 @@ body
           color: #00496B
 
 .menu
+  p
+    font-weight: bold
+    
   ul
     list-style-type: none
-    margin: 0
+    margin: 0 0 20 0
     padding: 0
 
   li
@@ -119,7 +121,6 @@ body
     -ms-transition: font-size 0.3s ease, background-color 0.3s ease
     transition: font-size 0.3s ease, background-color 0.3s ease
     display: block
-    width: 200px
 
   a:hover
     font-size: 20px
