--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700");
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -42,7 +41,7 @@ body {
 }
 .main-content p {
   line-height: 1.6;
-  margin-bottom: 1.7em;
+  margin-bottom: 1em;
 }
 .footer {
   margin: 50px auto;
@@ -92,9 +91,12 @@ body {
   background: #e1eef4;
   color: #00496b;
 }
+.menu p {
+  font-weight: bold;
+}
 .menu ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 20 0;
   padding: 0;
 }
 .menu li {
@@ -114,7 +116,6 @@ body {
   -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
   transition: font-size 0.3s ease, background-color 0.3s ease;
   display: block;
-  width: 200px;
 }
 .menu a:hover {
   font-size: 20px;
