Add race details page prototype

--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -98,7 +98,7 @@ body
 .menu
   p
     font-weight: bold
-    
+
   ul
     list-style-type: none
     margin: 0 0 20 0
@@ -125,3 +125,6 @@ body
   a:hover
     font-size: 20px
     background: #f6f6f6
+
+.bold
+  font-weight: bold
