--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -44,6 +44,9 @@ body
     line-height 1.6
     margin-bottom 1em
 
+  th
+    text-align: left
+
 .footer
   margin 50px auto
   max-width 600px
@@ -128,3 +131,21 @@ body
 
 .bold
   font-weight: bold
+
+div.report
+  font-size: 10px
+  height: 150px
+  width: 600px
+  overflow-y: scroll
+  overflow-x: hidden
+  border: 1px dotted black
+
+  img
+    display: none
+
+  table
+    border: 1px solid grey
+    margin-left: 20px
+
+    td
+      padding: 2px
