--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -149,3 +149,10 @@ div.report
 
     td
       padding: 2px
+
+button
+  padding: 5px
+  border: 1 solid black
+
+button:hover
+  text-decoration: underline
