Implment ignoring of races

--- a/client/src/templates/race_details.pug
+++ b/client/src/templates/race_details.pug
@@ -32,3 +32,4 @@ block content
 
     unless published===true
       button(id='ignore') Ignore Race
+      input(type='hidden', value=_id, id='race_id')
