--- a/client/src/templates/default.pug
+++ b/client/src/templates/default.pug
@@ -1,9 +1,12 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
     script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
+    script(src='//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/alertify.min.js')
     script(src='/js/app.js')
+    link(rel='stylesheet', href='/css/index.css')
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css')
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/themes/default.min.css')
     title=title
 
   body
