--- a/client/src/templates/default.pug
+++ b/client/src/templates/default.pug
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css')
     link(rel='stylesheet', href='//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/themes/default.min.css')
+    link(rel="icon", type="image/png", href="/images/favicon.png")
     title=title
 
   body
