Added runners list page

--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -157,3 +157,13 @@ button
 
 button:hover
   text-decoration: underline
+
+div.runnersList
+  table
+    border-bottom: 1px solid grey
+
+    td
+      padding: 2px
+      border-top: 1px solid grey
+      border-right: 1px solid grey
+      border-left: 1px solid grey
