Added runner details page

--- a/client/src/templates/runners_list.pug
+++ b/client/src/templates/runners_list.pug
@@ -15,6 +15,6 @@ block content
           each runner in runners
             tr
               td 
-                !=runner.name
+                a(href='/runner/' + runner._id) #{runner.name}
               td
                 !=runner.totalDistance
