Implement the setting of runner gender. Refactor api endpoints into entity-specific controllers

--- a/client/src/templates/default.pug
+++ b/client/src/templates/default.pug
@@ -16,7 +16,7 @@ html
 
     ul.nav
       li: a(href='/') Races
-      li: a(href='/runners') Runners
+      li: a(href='/runner') Runners
       if auth
         li: a(href='/auth/logout') Logout
 
