--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -167,3 +167,23 @@ div.runnersList
       border-top: 1px solid grey
       border-right: 1px solid grey
       border-left: 1px solid grey
+
+div.runner-details
+  p.name
+    font-weight: bold
+    text-decoration: underline
+    
+  p.gender
+    font-weight: bold
+    float: left
+    -webkit-margin-before: 0em;
+
+  table
+    clear: both
+
+    td
+      padding: 4px
+      border-right: 1px dashed grey
+
+  select#genderSelect
+    margin-left: 1em
