--- a/client/src/templates/runner_details.pug
+++ b/client/src/templates/runner_details.pug
@@ -11,8 +11,8 @@ block content
       input(type='hidden', value=_id, id='runner_id')
       select#genderSelect
         option(value='', selected= true) - Select -
-        option(value='Man', selected= gender === 'Man') Man
-        option(value='Woman', selected= gender === 'Woman')  Woman
+        option(value='man', selected= gender === 'man') Man
+        option(value='woman', selected= gender === 'woman')  Woman
 
     p
       if races.length > 0
