Refactor race parsing methods, and implement placeholder for rescan button.

--- a/client/src/templates/race_details.pug
+++ b/client/src/templates/race_details.pug
@@ -35,3 +35,4 @@ block content
         button(id='process', title='Update runners with race distance') Process
       button(id='mark-processed', title='Mark as processed without updating runners') Mark as Processed
       input(type='hidden', value=_id, id='race_id')
+    button(id='rescan', title='Rescan race details') Rescan
