Infer runner gender from category in results

--- a/client/src/templates/race_details.pug
+++ b/client/src/templates/race_details.pug
@@ -25,7 +25,7 @@ block content
             each runner in runners
               tr
                 td 
-                  !=runner
+                  !=runner.name
       else
         p Unable to determine runners
 
