add race to person

--- a/client/src/stylesheets/index.styl
+++ b/client/src/stylesheets/index.styl
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700')
 
-*
-  padding 0
-  box-sizing border-box
-
 body
   font-family 'Source Code Pro', monospace
 
@@ -203,3 +199,14 @@ div.runner-details
 
   select#genderSelect
     margin-left: 1em
+
+  div#add-race-form
+    display: none
+
+fieldset#add-race
+  select
+    width: 100px
+  label
+    display: inline-block
+    width: 75px
+    text-align: right
